--- a/backend-semana1/aula2/first-script/package.json
+++ b/backend-semana1/aula2/first-script/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "clear && echo \"Starting application...\" && tsc && node ./build/index.js",
+    "start": "clear && echo \"Starting application...\" && tsc && node ./build/exercicio5.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
