--- a/semana16/aula46/aula-knex-express-template/package.json
+++ b/semana16/aula46/aula-knex-express-template/package.json
@@ -1,27 +1,31 @@
 {
   "name": "aula-back-arquitetura",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node ./src/index.ts",
-    "start:dev": "ts-node-dev ./src/index.ts"
+    "dev": "ts-node-dev ./src/index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "4.17.0",
-    "@types/knex": "0.16.1",
     "@types/node": "13.7.7",
-    "dotenv": "8.2.0",
-    "express": "4.17.0",
-    "knex": "0.21.1",
-    "mysql": "2.18.1",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.0",
+    "knex": "^0.21.1",
+    "mysql": "^2.18.1",
     "ts-node": "8.6.2",
-    "typescript": "^3.8.3"
+    "tsc": "^1.20150623.0"
   },
   "devDependencies": {
-    "ts-node-dev": "1.0.0-pre.50"
-  }
+    "@types/cors": "^2.8.8",
+    "@types/express": "^4.17.0",
+    "@types/knex": "^0.16.1",
+    "ts-node-dev": "^1.0.0-pre.50",
+    "typescript": "^3.9.7"
+  },
+  "keywords": [],
+  "description": ""
 }
